--- a/package.json
+++ b/package.json
@@ -12,18 +12,14 @@
   "dependencies": {
     "axios": "^1.6.2",
     "i18next": "^23.7.16",
-    "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
-    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.5.0",
-    "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
-    "scss": "^0.2.4",
-    "sort-by": "^1.2.0"
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.167",
