--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/node": "^20.11.0",
     "axios": "^1.6.2",
     "i18next": "^23.7.16",
     "i18next-http-backend": "^2.4.2",
